<resources>
    <string name="app_name">Gourmandism</string>
    <string name="Comment">最新評論</string>
    <string name="home">HOME</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_shop">搜尋餐廳…</string>
    <string name="Search">SEARCH</string>
    <string name="address">住址:</string>
    <string name="business_time">本日營業時間:</string>
    <string name="phone">電話:</string>
    <string name="about">關於店家</string>
    <string name="comment_area">評論專區</string>
    <string name="open">營業中</string>
    <string name="close">休息中</string>
    <string name="openList">開團列表</string>
    <string name="myEvent">我的揪團</string>
    <string name="host">團長:</string>
    <string name="location">地點:&#160;</string>
    <string name="number_people">人數:</string>
    <string name="time">時間:</string>
    <string name="join">加入</string>
    <string name="my_wish_list">我的清單</string>
    <string name="share_wish_list">關注清單</string>
    <string name="recommend_list">推薦清單</string>
    <string name="my_comment">我的食記</string>
    <string name="preview">最近瀏覽</string>
    <string name="from">from&#160;</string>
    <string name="follower">&#160;位追蹤者</string>
    <string name="space">&#160;</string>
    <string name="addComment">新增評論&#160;</string>
    <string name="share_comment">分享評論</string>
    <string name="divider">&#160;/&#160;</string>
    <string name="addToWish">收藏到清單</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="input_tag">輸入標籤名稱..</string>
    <string name="add_friend">ADD FRIEND</string>
    <string name="delete_friend">DELETE FRIEND</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="friend_list">FRIEND LIST</string>
    <string name="friend_list_ch">好友列表</string>
    <string name="message">MESSAGE</string>
    <string name="hyphen">&#160;─&#160;</string>

    <string name="follow_collection">關注收藏</string>
    <string name="follow_cancel">取消關注</string>
    <string name="remove">REMOVE</string>
    <string name="profile_about">Say something about you</string>
    <string name="Private">Private</string>
    <string name="Public">Public</string>
    <string name="kilo">公里</string>
    <string name="lottery">抽選</string>

    <string name="time_to_go">已到赴約時間!</string>
    <string name="event_notification">&#160;─&#160;揪團通知</string>
    <string name="pick_restaurant">餐廳抽選</string>
    <string name="sign_out">登出</string>
    <string name="welcome">Welcome</string>
    <string name="edit">編輯</string>

    <!--  EventJoinDialog  -->
    <string name="join_success">加入成功</string>
    <string name="leave_success">退出成功</string>
    <string name="new_success">新增成功</string>
    <string name="full">人數已滿</string>
    <string name="cancel">取消追蹤</string>
    <string name="edit_select_time">選擇時間..</string>
    <string name="edit_input_content">請輸入內容..</string>
    <string name="edit_select_number">選擇人數..</string>
    <string name="text_new">新增</string>

    <!-- LotteryFragment_Spinner -->
    <string-array name="food_type">
        <item>全部</item>
        <item>中式</item>
        <item>美式</item>
        <item>歐式</item>
        <item>日式</item>
        <item>泰式</item>
        <item>韓式</item>
        <item>飲料</item>
        <item>咖啡</item>
        <item>炸物</item>
        <item>酒吧</item>
        <item>火鍋</item>
        <item>燒烤</item>
        <item>小吃</item>
    </string-array>
</resources>