<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewModel"
            type="com.louis.gourmandism.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/bottomSheetDialogStyle"
        app:behavior_hideable="true"
        app:behavior_peekHeight="25dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        >

        <TextView
            android:id="@+id/text_shop_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@{viewModel.shopInfo.name}"
            android:textColor="@color/black_3f3a3a"
            android:textSize="25sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toStartOf="@+id/button_go"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_go"
            tools:text="Gary 麵包工坊" />

        <EditText
            android:id="@+id/edit_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_layout_5"
            android:ems="10"
            android:hint="@string/edit_select_number"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_shop_name"
            app:layout_constraintTop_toBottomOf="@+id/text_shop_name" />

        <TextView
            android:id="@+id/edit_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_layout_5"
            android:hint="@string/edit_select_time"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/edit_number"
            app:layout_constraintStart_toStartOf="@+id/edit_number"
            app:layout_constraintTop_toBottomOf="@+id/edit_number" />

        <EditText
            android:id="@+id/edit_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_layout_5"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/edit_input_content"
            android:inputType="textMultiLine"
            android:minLines="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edit_time"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edit_number"
            app:layout_constraintTop_toBottomOf="@+id/edit_time" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:text="GO"
                android:textColor="@color/black_3f3a3a"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon_forward"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:alpha="0.8"
                app:layout_constraintBottom_toBottomOf="@+id/text_go"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_go"
                app:layout_constraintTop_toTopOf="@+id/text_go"
                app:srcCompat="@drawable/forward" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>