<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.louis.gourmandism.wish.detail.WishDetailViewModel" />
        <import type="android.view.View"/>
        <import type="it.beppi.tristatetogglebutton_library.TriStateToggleButton"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".wish.detail.WishDetailFragment">


        <TextView
            android:id="@+id/text_list_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@{viewModel.favoriteInfo.folderName}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="炸物集合" />

        <TextView
            android:id="@+id/text_host_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{@string/from + String.valueOf(viewModel.user.name)}"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/text_list_name"
            app:layout_constraintTop_toBottomOf="@+id/switch_status"
            tools:text="from Gary" />

        <TextView
            android:id="@+id/text_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{String.valueOf(viewModel.favoriteInfo.attentionList.size()) + @string/follower}"
            app:layout_constraintStart_toStartOf="@+id/text_host_name"
            app:layout_constraintTop_toBottomOf="@+id/text_host_name"
            tools:text="12位追隨者" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray_999999"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_add_attention" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_favorite"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            app:layout_constraintVertical_bias="0.571"
            tools:listitem="@layout/item_favorite" />

        <TextView
            android:id="@+id/text_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_layout_4"
            android:text="@string/remove"
            android:visibility="@{viewModel.listStatus == 1 ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_list_name" />

        <TextView
            android:id="@+id/text_add_attention"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_half_margin"
            android:background="@drawable/round_layout"
            android:gravity="center"
            android:paddingVertical="@dimen/standard_half_margin"
            android:text="@{viewModel.listStatus == 3 ? @string/follow_collection:@string/follow_cancel}"
            android:textSize="@dimen/standard_font_size"
            android:textStyle="bold"
            android:visibility="@{viewModel.listStatus != 1 ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_follower"
            tools:text="@string/follow_collection" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_status"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_layout"
            android:text="@string/Private"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"
            android:switchPadding="0.0dp"
            app:trackTint="@color/selector_switch_track"
            app:thumbTint="@color/selector_switch_thumb"
            app:layout_constraintStart_toStartOf="@+id/text_list_name"
            app:layout_constraintTop_toBottomOf="@+id/text_list_name"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>