<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="event"
            type="com.louis.gourmandism.data.Event" />

    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="0dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/text_shop_info"
                app:layout_constraintStart_toStartOf="@+id/text_shop_info"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_main"
                    imageUrl="@{event.shop.image[0]}"
                    android:layout_width="180dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_shop"
                style="@style/detail_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{event.shop.name}"
                android:textColor="@color/black_3f3a3a"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/text_host"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/cardView"
                app:layout_constraintVertical_chainStyle="spread_inside"
                tools:text="Gary 麵包工坊" />

            <TextView
                android:id="@+id/text_location"
                style="@style/detail_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/location"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/text_time"
                app:layout_constraintTop_toBottomOf="@+id/text_time" />

            <TextView
                android:id="@+id/text_host_name"
                style="@style/detail_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@{event.host.name}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_host"
                app:layout_constraintStart_toEndOf="@+id/text_host"
                app:layout_constraintTop_toTopOf="@+id/text_host"
                tools:text="Gary" />

            <!--            <View-->
            <!--                android:id="@+id/view_line4"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="1dp"-->
            <!--                android:layout_marginStart="8dp"-->
            <!--                android:layout_marginTop="8dp"-->
            <!--                android:layout_marginEnd="8dp"-->
            <!--                android:background="@color/gray_cccccc"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintHorizontal_bias="1.0"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/text_context" />-->

            <TextView
                android:id="@+id/text_time"
                style="@style/detail_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:text="12/25 AM 11:00" />

            <TextView
                android:id="@+id/text_host"
                style="@style/detail_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/host"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/text_number_people"
                app:layout_constraintStart_toStartOf="@+id/text_shop"
                app:layout_constraintTop_toBottomOf="@+id/text_shop" />

            <TextView
                android:id="@+id/text_location_content"
                style="@style/detail_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{event.shop.address}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_location"
                app:layout_constraintStart_toEndOf="@+id/text_location"
                app:layout_constraintTop_toTopOf="@+id/text_location"
                tools:text="台北市松山區99999號" />

            <TextView
                android:id="@+id/text_number_people"
                style="@style/detail_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_people"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/text_host"
                app:layout_constraintTop_toBottomOf="@+id/text_host" />

            <TextView
                android:id="@+id/text_number_people_content"
                style="@style/detail_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@{String.valueOf(event.member.size()) + @string/divider + String.valueOf(event.memberLimit)}"
                android:textColor="@{event.member.size()>=event.memberLimit?@color/red_d0021b:@color/gray_888888}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_number_people"
                app:layout_constraintStart_toEndOf="@+id/text_number_people"
                app:layout_constraintTop_toTopOf="@+id/text_number_people"
                tools:text="3/8" />

            <TextView
                android:id="@+id/text_context"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{event.content}"
                android:textColor="@color/gray_888888"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/text_location"
                tools:text="快來一起吃~快來一起吃~快來一起吃~快來一起吃~快來一起吃~快來一起吃~" />

            <TextView
                android:id="@+id/text_shop_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_layout_3"
                android:gravity="center"
                android:text="店家詳情"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view_line5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_context" />

            <TextView
                android:id="@+id/text_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_layout_3"
                android:gravity="center"
                android:text="@string/join"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/view_line5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view_line5"
                app:layout_constraintTop_toTopOf="@+id/view_line5" />

            <View
                android:id="@+id/view_line5"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/gray_cccccc"
                app:layout_constraintBottom_toBottomOf="@+id/text_shop_info"
                app:layout_constraintEnd_toStartOf="@+id/text_add"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_shop_info"
                app:layout_constraintTop_toTopOf="@+id/text_shop_info" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>